tests/sumo/extended/calibrator/errors/invalid_flow/errors.sumo
Warning: No flow intervals in calibrator 'slow'.
Error: Attribute 'id' is missing in definition of a flow.
Error: At least one of 'period', 'vehsPerHour', 'probability', and 'number' is needed in flow ''.
Quitting (on error).
